@@ -10,10 +10,11 @@ void saveGame::mainContext(Essentials& essentials, const PlayerData& playerData)
 {
 	bool quitSaveGameMenu{false};
 	SlotsUserInterface slotsGui{essentials, SaveNameFocusingOnSaving};
-	saveGame::mainLoop(essentials, playerData, slotsGui, quitSaveGameMenu);
+	const TextureCombo screenBackground{ essentials.logs, essentials.rndWnd, "textures/wallpapers/campaignChoice.png" };
+	saveGame::mainLoop(essentials, playerData, slotsGui, screenBackground, quitSaveGameMenu);
 }
 
-void saveGame::mainLoop(Essentials& essentials, const PlayerData& playerData, SlotsUserInterface& slotsGui, bool& quitSaveGameMenu)
+void saveGame::mainLoop(Essentials& essentials, const PlayerData& playerData, SlotsUserInterface& slotsGui, const TextureCombo& screenBackground, bool& quitSaveGameMenu)
 {
 	while( false == quitSaveGameMenu )
 	{
@@ -21,7 +22,7 @@ void saveGame::mainLoop(Essentials& essentials, const PlayerData& playerData, Sl
 		slotsGui.update(essentials);
 		saveGame::quitContext(essentials, slotsGui, quitSaveGameMenu);
 		saveGame::saveASlot(essentials, playerData, slotsGui);
-		saveGame::drawEverything(essentials, slotsGui);
+		saveGame::drawEverything(essentials, slotsGui, screenBackground);
 	}
 }
 
@@ -30,9 +31,9 @@ void saveGame::saveASlot(Essentials& essentials, const PlayerData& playerData, S
 	slotsGui.saveToFile(essentials, playerData);
 }
 
-void saveGame::drawEverything(Essentials& essentials, const SlotsUserInterface& slotsGui)
+void saveGame::drawEverything(Essentials& essentials, const SlotsUserInterface& slotsGui, const TextureCombo& screenBackground)
 {
-	essentials.rndWnd.clearScreen(BlackColor);
+	screenBackground.draw(essentials.rndWnd);
 	slotsGui.drawInterface(essentials);
 	essentials.rndWnd.displayRenderer();
 	SDL_Delay(SdlDelayTime);
